# This file documents the revision history for Perl extension Catalyst.

  New features:
   - Log an extra line in debug mode with the response status code,
     the content type and content length if available.

  Refactoring / optimizations:
   - Display of the end of hit debug messages has been factored out into
     log_headers, log_request and log_response methods which all call
     $c->dump_these so that there is a unified point from which to hook
     in parameter filtering (for example).
   - $c->model/view/controller have become a lot faster for non-regexp names
     by using direct hash lookup instead of looping.
   - IP address => hostname mapping for the server is only done once and cached
     by Catalyst::Engine::HTTP to somewhat mitigate the problem of people
     developing on machines pointed at slow DNS servers.

  Bugs fixed:
    - DispatchType::Index's uri_for_action only returns for actions registered
      with it (prevents 'index :Path' or similar resolving to the wrong URI)
    - Make sure to construct Upload objects properly, even if there are
      multiple Content-Type headers (Closes RT#55976).

5.80021 2010-03-03 23:02:01

  Bug fixed:
   - $c->uri_for will now escape unsafe characterss in captures
     ($c->request->captures) and correctly encode utf8 charracters.

5.80020 2010-02-04 06:51:18

  New features:
    - Allow components to specify additional components to be set up by
      overriding the expand_modules method. (Oliver Charles)

5.80019 2010-01-29 01:04:09

  Bug fixed:
   - Calls to $c->uri_for with private paths as strings (e.g.
     $c->uri_for('controller/action', 'arg1', 'arg2') ) no longer have
     / encoded to %2F. This is due to $c->uri_for('static', 'css/foo', $bar)
     which should not be encoded.
     Calls with an action object (rather than a string), or uri_for action
     will still encode / in args and captures to %2F

   - The above noted / => %2F encoding in uri_for_action or uri_for with